--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/express-marko.js"
   },
   "dependencies": {
     "@lasso/marko-taglib": "^1.0.10",
