--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "experiment",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "start": "node ./bin/server.js"
   },
